--- a/mlib.html
+++ b/mlib.html
@@ -28,8 +28,9 @@ mlib provides the following Common Lisp-like functions and macros:
     - [prog1, prog2](#macro-prog1-prog2)
     - [when](#macro-when), [unless](#macro-unless), [case](#macro-case), [typecase](#macro-typecase)
 - conses and lists
-    - [caar..cdddr](#function-caarcdddr), [nthcdr, nth](#function-nthcdr-nth), [copy-list](#function-copy-list)
-    - [list-length](#function-list-length), [last](#function-last), [nconc](#function-nconc), [revappend, nreconc](#function-revappend-nreconc), [member](#function-member)
+    - [caar..cdddr](#function-caarcdddr), [nthcdr, dotted-nthcdr, nth](#function-nthcdr-dotted-nthcdr-nth), [copy-list](#function-copy-list)
+    - [list-length](#function-list-length), [last](#function-last), [butlast](#function-butlast), [nbutlast](#function-nbutlast), [ldiff](#function-ldiff), [tailp](#function-tailp)
+    - [nconc](#function-nconc), [revappend, nreconc](#function-revappend-nreconc), [member](#function-member), [adjoin](#function-adjoin)
     - [acons](#function-acons)
     - [mapcar](#function-mapcar), [maplist](#function-maplist), [mapc](#function-mapc), [mapl](#function-mapl), [mapcan](#function-mapcan), [mapcon](#function-mapcon)
     - [multiple-value-list](#macro-multiple-value-list), [nth-value](#macro-nth-value)
@@ -39,7 +40,7 @@ mlib provides the following Common Lisp-like functions and macros:
     - [destructuring-bind](#macro-destructuring-bind)
     - [get-setf-expansion](#function-get-setf-expansion)
     - [setf](#macro-setf), [incf, decf](#macro-incf-decf)
-    - [push](#macro-push), [pop](#macro-pop)
+    - [push](#macro-push), [pop](#macro-pop), [pushnew](#macro-pushnew)
 - numbers, characters
     - [abs](#function-abs), [min](#function-min), [max](#function-max), [zerop](#function-zerop), [evenp](#function-evenp), [oddp](#function-oddp)
     - [char=](#function-char), [char](#function-char-1), [bit](#function-bit)
@@ -111,12 +112,13 @@ Since: 1.1
 Logical not.
 
 ### Macro: and
-    (and forms*) -> boolean
+    (and forms*) -> result
 
 Since: 1.1
 
 Short-circuiting logical and.
-Return `t` unless any of the `forms` evaluate to `nil`,
+Return `t` if no forms were given,
+otherwise return the values resulting from the evaluation of the last form unless any of the `forms` evaluate to `nil`,
 `nil` otherwise.
 
 ### Macro: or
@@ -198,13 +200,17 @@ Since: 1.1
 
 `c..r` repeatedly apply `car` and/ or `cdr` as the name suggests.
 
-### Function: nthcdr, nth
+### Function: nthcdr, dotted-nthcdr, nth
     (nthcdr n lst) -> nth-tail
+    (dotted-nthcdr n lst) -> nth-tail
     (nth n lst) -> nth-element
 
 Since: 1.1
 
 `nthcdr` applies `cdr` n times and returns the result.
+`dotted-nthcdr` works similar to `nthcdr` except:
+going past the end of a dotted list returns `nil`
+(and not an error as `nthcdr` would).
 `nth` works as if `(car (nthcdr n lst))` was invoked.
 
 ### Function: copy-list
@@ -310,12 +316,22 @@ Example usage:
         ; => (2 3)
     (member 'e '(a b c d))
         ; => NIL
-    (member '(1 . 1) '((a . a) (b . b) (c . c) (1 . 1) (2 . 2) (3 . 3)) equal)
+    (member '(1 . 1) '((a . a) (b . b) (c . c) (1 . 1) (2 . 2) (3 . 3))
+            equal)
         ; => ((1 . 1) (2 . 2) (3 . 3))
     (member 'c '(a b c 1 2 3) eq)
         ; => (c 1 2 3)
     (member 'b '(a b c 1 2 3) (lambda (a b) (eq a b)))
         ; => (b c 1 2 3)
+
+### Function: adjoin
+    (adjoin item list [test]) -> result-list
+
+Since: 1.4.5
+
+Tests whether `item` is the same as an existing element of `lst`.
+If the `item` is not an existing element, `adjoin` adds it to `lst` (as if by `cons`)
+and returns the resulting list; otherwise, nothing is added and the original list is returned.
 
 ### Function: acons
     (acons key datum alist) -> new-alist
@@ -393,8 +409,13 @@ Since: 1.4
 Since: 1.4
 
 ### Macro: do, do*
-    (do ({var | (var [init-form [step-form]])}*) (end-test-form result-form*) statement*) -> result
-    (do* ({var | (var [init-form [step-form]])}*) (end-test-form result-form*) statement*) -> result
+    (do ({var | (var [init-form [step-form]])}*)
+        (end-test-form result-form*)
+        statement*) -> result
+    
+    (do* ({var | (var [init-form [step-form]])}*)
+         (end-test-form result-form*)
+         statement*) -> result
 
 Since: 1.1
 
@@ -432,12 +453,47 @@ Since: 1.3
 Just like `dolist`, but with vectors.
 
 ### Macro: doplist
-    (doplist (key-var value-var plist-form result-form*) statement*) -> result
+    (doplist (key-var value-var plist-form result-form*)
+      statement*) -> result
 
 Since: 1.2
 
 Iterates over key-value pairs of `plist-form`.
 Similar to Alexandria `doplist`, see https://alexandria.common-lisp.dev/draft/alexandria.html.
+
+### Function: butlast
+    (butlast lst n?) -> result-list
+
+Since: 1.4.5
+
+`butlast` returns a copy of `lst` from which the last `n` conses have been omitted.
+If `n` is not supplied, its value is 1. If there are fewer than `n` conses in `lst`, `nil` is returned.
+
+### Function: nbutlast
+    (nbutlast lst n?) -> result-list
+
+Since: 1.4.5
+
+`nbutlast` is like `butlast`, but `nbutlast` may modify `lst`.
+It changes the cdr of the cons n+1 from the end of `lst` to `nil` except
+if there are fewer than `n` conses in `lst`, `nil` is returned and `lst` is not modified.
+
+### Function: ldiff
+    (ldiff lst obj) -> result-list
+
+Since: 1.4.5
+
+Return a new list, whose elements are those of `lst` that appear before
+`obj`. If `obj` is not a tail of `lst`, a copy of `lst` is returned.
+`lst` must be a proper list or a dotted list.
+
+### Function: tailp
+    (tailp obj lst) -> boolean
+
+Since: 1.4.5
+
+ Return `true` if `obj` is the same as some tail of `lst`, otherwise
+ returns `false`. `lst` must be a proper list or a dotted list.
 
 ### Macro: destructuring-bind
     (destructuring-bind (vars*) expression forms*)
@@ -533,6 +589,16 @@ Since: 1.1
 
 `push` prepends `item` to the list that is stored in `place`,
 stores the resulting list in `place`, and returns the list.
+
+### Macro: pushnew
+    (pushnew item place [test]) -> new-place-value
+
+Since: 1.4.5
+
+`pushnew` tests whether `item` is the same as any existing element of the list stored in `place`.
+If `item` is not, it is prepended to the list, and the new list is stored in `place`.
+
+`pushnew` returns the new list that is stored in `place`.
 
 ### Macro: pop
     (pop place) -> element
@@ -1075,7 +1141,8 @@ Example usage:
 Since: 1.4
 
 ### Macro: with-accumulator
-    (with-accumulator accumulator-name accumulator start-value-form forms*) -> result
+    (with-accumulator accumulator-name accumulator start-value-form
+      forms*) -> result
 
 Since: 1.2
 
