--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@ img {
    to try it out -
    <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.4.5/GETTING%20STARTED.txt">GETTING STARTED.txt</a> has all the steps needed.<p>
 <p>See <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.4.5/CHANGES">CHANGES</a> for changes to previous versions.</p>
-   <a href="murmel-langref.html" target="_blank">Murmel 1.4.5 Language reference</a>
-   for info about the core language, and see
-   <a href="mlib.html" target="_blank">Murmel's default library documentation</a>.</p>
-<p>See 
+<p>See <a href="murmel-langref.html" target="_blank">Murmel 1.4.5 Language reference</a>
+   for info about the core language, and see <a href="mlib.html" target="_blank">Murmel's default library documentation</a>.</p>
 <p>See the <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for source code, more information and sample code.</p>
 <h2>Some screenshots:</h2>
 <p>Text session defining and using a macro:</p>
