use cloudflare for jquery

--- a/repl/index.html
+++ b/repl/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>Murmel Online REPL</title>
     <script src="https://cjrtnc.leaningtech.com/3.0/cj3loader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.38.0/js/jquery.terminal.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.38.0/css/jquery.terminal.min.css" rel="stylesheet"/>
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.38.0/css/jquery.terminal.min.css" rel="stylesheet"/>
     <style>
         body{
             margin:1em auto;
