--- a/repl/index.html
+++ b/repl/index.html
@@ -69,7 +69,7 @@
     Murmel is a Lisp interpreter/ compiler,
     see the <a href="https://jmurmel.github.io/murmel-langref.html" target="_blank">Murmel Language Reference</a>
     and the <a href="https://jmurmel.github.io/mlib.html" target="_blank">Murmel Default Library Reference</a>
-    (type <code>(load "mlib.lisp")</code> at the REPL to use it).
+    (type <code>(require "mlib")</code> at the REPL to use it).
 </div>
 <div>&nbsp;</div>
 
