--- a/repl/index.html
+++ b/repl/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Online REPL for Murmel, a Lisp dialect.">
+    <meta name="keywords" content="repl, murmel, murmel-lang, lisp, interpreter, lisp-interpreter, lisp-dialect">
     <title>Murmel Online REPL</title>
     <script src="https://cjrtnc.leaningtech.com/3.0/cj3loader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -55,7 +58,7 @@
             greetings: 'Murmel Interpreter\nEnter a Murmel form (turtle graphics or :commands don\'t work yet)\n',
             name: 'murmel_demo',
             height: 500,
-            width: 800,
+            width: 600,
             prompt: 'JMurmel> '
         });
     });
