print mv, link snapshot docs

--- a/repl/index.html
+++ b/repl/index.html
@@ -69,9 +69,9 @@
 <h1>Murmel Online REPL</h1>
 
 <div>
-    Murmel is a Lisp interpreter/ compiler,
-    see the <a href="https://jmurmel.github.io/murmel-langref.html" target="_blank">Murmel Language Reference</a>
-    and the <a href="https://jmurmel.github.io/mlib.html" target="_blank">Murmel Default Library Reference</a>
+    <a href="https://jmurmel.github.io" target="_blank">Murmel</a> is a Lisp interpreter/ compiler,
+    see the <a href="murmel-langref.html" target="_blank">Murmel Language Reference</a>
+    and the <a href="mlib.html" target="_blank">Murmel Default Library Reference</a>
     (type <code>(require "mlib")</code> at the REPL to use it).
 </div>
 <div>&nbsp;</div>
@@ -80,7 +80,7 @@
 <div>&nbsp;</div>
 
 <div id="credits">
-    This <a href="https://jmurmel.github.io" target="_blank">Murmel</a> Online REPL uses
+    This <a href="https://jmurmel.github.io" target="_blank">Murmel 1.4.6-SNAPSHOT</a> Online REPL uses
     <a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ 3.0</a> (*)
     and <a href="https://terminal.jcubic.pl/" target="_blank">jQuery Terminal 2.38.0</a>.
     <br/><br/>
