--- a/repl/index.html
+++ b/repl/index.html
@@ -15,7 +15,7 @@
             margin:1em auto;
             max-width:40em;
             padding:0 .62em;
-            font:1.2em/1.62 sans-serif;
+            font: 1.2em/1.62 sans-serif;
         }
 
         h1,h2,h3 {
@@ -26,6 +26,13 @@
             font:1.2em/1.62 monospace;
             color: lightgreen;
             background: black;
+        }
+
+        #credits {
+            background: lightgray;
+            padding: 0.5em;
+            font: 1em/1.62 sans-serif;
+            font-size: 80%;
         }
 
         #term_demo {
@@ -55,7 +62,7 @@
                 }
             }
         }, {
-            greetings: 'Murmel Interpreter\nEnter a Murmel form (turtle graphics or :commands don\'t work yet)\n',
+            greetings: 'Murmel Interpreter\nEnter a Murmel form (REPL variables, turtle graphics or :commands don\'t work yet)\n',
             name: 'murmel_demo',
             height: 500,
             width: 600,
@@ -76,18 +83,19 @@
 </div>
 <div>&nbsp;</div>
 
-<div id="term_demo"></div>
-<div>&nbsp;</div>
-
 <div id="credits">
     This <a href="https://jmurmel.github.io" target="_blank">Murmel 1.4.6-SNAPSHOT</a> Online REPL uses
+    <a href="https://github.com/jquery/jquery" target="_blank">jQuery 3.7.1</a>,
     <a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ 3.0</a> (*)
     and <a href="https://terminal.jcubic.pl/" target="_blank">jQuery Terminal 2.38.0</a>.
-    <br/><br/>
+    <br/>
     (*) <a href="https://labs.leaningtech.com/cheerpj3" target="_blank">CheerpJ</a>
     is free to use for personal projects, most non-commercial applications, and for technical evaluations,
     see <a href="https://labs.leaningtech.com/cheerpj3/licensing" target="_blank">CheerpJ licensing</a>.
-
 </div>
+<div>&nbsp;</div>
+
+<div id="term_demo"></div>
+
 </body>
 </html>
