--- a/repl/index.html
+++ b/repl/index.html
@@ -11,14 +11,11 @@
     <script src="https://cjrtnc.leaningtech.com/3.0/cj3loader.js"></script>
 
     <!-- jQuery and jQuery Terminal -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.terminal@2.38.0/js/jquery.terminal.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.7.1/dist/jquery.min.js,npm/jquery.terminal@2.38.0/js/jquery.terminal.min.js"></script>
     <link  href="https://cdn.jsdelivr.net/npm/jquery.terminal@2.38.0/css/jquery.terminal.min.css" rel="stylesheet">
 
     <!-- Prism (syntax highlighting library) and Prism monkey patches for jQuery Terminal -->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-lisp.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.terminal@2.38.0/js/prism.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/prismjs@1.29.0/prism.min.js,npm/prismjs@1.29.0/components/prism-lisp.min.js,npm/jquery.terminal@2.38.0/js/prism.min.js"></script>
     <link  href="https://cdn.jsdelivr.net/npm/terminal-prism@0.3.1/css/prism.min.css" rel="stylesheet">
 
     <style>
