--- a/repl/index.html
+++ b/repl/index.html
@@ -76,6 +76,7 @@ This REPL has an editable, searchable history with keyboard shortcuts:
 <ul>
 <li><tt>Shift-Enter</tt> allows entering multi-line commands
 <li><tt>CTRL+A/CTRL+E</tt> move to the start or end of a form (or use <tt>Pos-1</tt> or <tt>End</tt>)
+<li><tt>CTRL+K</tt> erases from the current cursor position to the end of the current form
 <li><tt>CTRL+L</tt> clears the screen
 <li><tt>CTRL+R</tt> starts reverse history search, <tt>CTRL+G</tt> exits, <tt>Enter</tt> runs the search result,
 	any arrow key transfers the search result to the REPL prompt
