--- a/repl/index.html
+++ b/repl/index.html
@@ -24,7 +24,6 @@
 	#credits {background: lightgray; padding: 0.5em; font-size: 80%;}
 </style>
 <script>
-
 $.terminal.syntax('lisp');
 
 const murmel = (async function () {
@@ -46,6 +45,20 @@ jQuery(function($, undefined) {
 		name: 'murmel_demo', prompt: 'JMurmel> ', width: $("#term_demo").clientWidth, height: 500,
 		greetings: 'Murmel Interpreter\nEnter a Murmel form or :command (or enter :h for command help)\n(compiling stuff or turtle graphics don´t work yet)\n'
 	});
+});
+
+jQuery(function($, undefined) {
+	if (window.location.search !== '') {
+		const params = new Proxy(new URLSearchParams(window.location.search), {
+			get: (searchParams, prop) => searchParams.get(prop),
+		});
+		let value = params.lisp;
+
+		if (value !== null) {
+			// see https://terminal.jcubic.pl/api_reference.php#terminal
+			$('#term_demo').terminal().insert(value);
+		}
+	}
 });
 </script>
 </head>
