--- a/repl/index.html
+++ b/repl/index.html
@@ -73,6 +73,10 @@ jQuery(function($, undefined) {
 	(type <tt>(require "mlib")</tt> at the REPL to use it).
 </div>
 
+<div class="text">
+	Links with Lisp code snippets can be generated using the <a href="genlink.html" target="_blank">Murmel Online REPL link generator</a>
+</div>
+
 <div id="credits" class="text">
 <a href="https://jmurmel.github.io" target="_blank">Murmel</a> Online REPL uses
 <a href="https://github.com/jquery/jquery" target="_blank">jQuery 3.7.1</a>,
