--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -15,7 +15,7 @@
 
 function translate() {
 	const inStr = document.getElementById('input').value;
-	const translated = encodeURI(inStr).replaceAll("+", "%2B").replaceAll("%20", "+");
+	const translated = encodeURIComponent(inStr);
 	const link = 'https://jmurmel.github.io/repl/?lisp=' + translated;
 
 	navigator.clipboard.writeText(link);
