--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -15,11 +15,16 @@
 
 function translate() {
 	const inStr = document.getElementById('input').value;
-	const translated = encodeURIComponent(inStr);
-	const link = 'https://jmurmel.github.io/repl/?lisp=' + translated;
+	const encoded = encodeURIComponent(inStr).replaceAll(')', '%29');
+	const link = 'https://jmurmel.github.io/repl/?lisp=' + encoded;
 
-	navigator.clipboard.writeText(link);
-	alert("Copied the link:\n" + link);
+	navigator.clipboard.writeText(link)
+	.then(() => {
+		alert("Copied the link:\n\n" + link);
+		})
+		.catch(() => {
+		  alert("something went wrong");
+		});
 }
 
 </script>
