--- a/repl/genlink.html
+++ b/repl/genlink.html
@@ -33,7 +33,8 @@ function translate() {
 <div class="text">
 The <a href="https://jmurmel.github.io/repl/">Murmel Online REPL</a> supports an URL parameter <tt>lisp</tt>.
 Use the form below to create an URL from your Lisp code
-that can be shared and will open a REPL with the code already present.
+that can be shared and will open a REPL with the code already present,
+ready to run (while still being editable).
 </div>
 <div class="text">
 Enter some Lisp code:<br>
